# mini-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  init-task.md  package.json  phase2_plan.md  pnpm-workspace.yaml  project_analysis_report.md  research.md  test_parser.py  test_sigex.py  valid_cms.der  Доверенность Электрокомплект.pdf.cms  Шаблон Акт (Казахстан).docx  фичи.md
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_drop_bank_transactions.py  0003_auto_add_columns.py  0004_postgres_production_safety_check.py  0005_edo_tables.py  0006_add_profile_uuid.py  0007_add_receiver_user_id.py  e1f0b00bb6d8_add_notifications_enabled_to_.py
apps/api/src/app/: main.py  telegram_bot_runner.py
apps/api/src/app/core/: auth.py  config.py  cors.py  db.py  s3.py  scheduler.py
apps/api/src/app/core/parsers/: parser1c.py
apps/api/src/app/modules/auth/: router.py  service.py
apps/api/src/app/modules/banks/: router.py
apps/api/src/app/modules/catalog/: router.py
apps/api/src/app/modules/clients/: router.py
apps/api/src/app/modules/dashboard/: router.py
apps/api/src/app/schemas/: auth.py  bank.py  catalog.py  client.py  document.py  health.py  invoice.py  profile.py  render.py  telegram.py
apps/api/src/app/services/: cms_parser.py  edo_notifications.py  egov.py  pdf_stamper.py  sigex_client.py  signature_exporter.py  stamp_trigger.py
apps/api/src/scripts/: migrate_signatures.py
apps/api/tests/: test_phase1_invoices.py
docs/: research.md  (+5 more)
(+92 files in other folders)
