[project]
name = "doc-mini-api"
version = "0.1.0"
description = "FastAPI backend for the Telegram document mini app."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "aiogram>=3.20,<4.0",
    "dramatiq>=1.17,<2.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.7,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-multipart>=0.0.18,<1.0",
    "redis>=5.2,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
